@@ -141,6 +141,9 @@ CVS code -
 	- If they're defined, translate KEY_SUP into NANO_PREVLINE_KEY
 	  and KEY_SDOWN into NANO_NEXTLINE_KEY, since they are sometimes
 	  generated by Shift-Up and Shift-Down. (DLR)
+  parse_escape_seq_kbinput()
+	- Handle unknown and unignored escape sequences once here
+	  instead of twice in parse_kbinput(). (DLR)
   display_string()
 	- Properly handle buf[start_index]'s being a null terminator.
 	  (DLR)
